[package]
name = "cgmemtime-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { version = "0.6", default-features = false }
tempfile = "3"
libc = "0.2"
thiserror = "1.0"
nix = { version = "0.26", features = ["signal", "resource"]}
